Linked jQuery, JavaScript, Bootstrap, CSS scripts and stylesheets.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Dashboard</title>
+  <title>Phan's Weather Dashboard</title>
+  <!-- BOOTSTRAP/CSS STYLESHEETS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
+  <header>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead">Phan's Weather Dashboard</p>
+      </div>
+    </div>
+  </header>
   <!-- **JUMBOTRON (weather dash)** -->
 <!-- Get card for current display -->
 
@@ -36,6 +47,9 @@ THEN I am again presented with current and future conditions for that city -->
 <!-- localStorage.getItem -->
 <!-- WHEN I open the weather dashboard
 THEN I am presented with the last searched city forecast -->
-  
+
+<!-- JQUERY/JAVASCRIPT -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+<script src="./assets/style.js"></script>
 </body>
 </html>
