--- a/index.html
+++ b/index.html
@@ -1,140 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phan's Weather Dashboard</title>
-  <!-- BOOTSTRAP/CSS STYLESHEETS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/style.css">
-  <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Rock+Salt|Slabo+27px&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Phan's Weather Dashboard</title>
+    <!-- // STYLESHEETS // -->
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Rock+Salt|Slabo+27px&display=swap" rel="stylesheet">
+    <!-- individual styles -->
+    <link rel="stylesheet" href="./assets/style.css">
+  </head>
 
-<body>
-  <!-- // JUMBOTRON // -->
-  <header class="jumbotron jumbotron-fluid" data-imgCredit="Photo by Victor Rodriguez on Unsplash">
-    <div class="container">
-      <h1 class="display-4">Phan's Weather Dashboard</h1>
-      <p class="lead">Whether or Not, Weather or Naught</p>
-    </div>
-  </header>
+  <body>
+    <!-- // JUMBOTRON // -->
+    <header class="jumbotron jumbotron-fluid" data-imgCredit="Photo by Victor Rodriguez on Unsplash">
+      <div class="container">
+        <h1 class="display-4">Phan's Weather Dashboard</h1>
+        <p class="lead">Whether or Not, Weather or Naught</p>
+      </div>
+    </header>
 
-<!-- // MAIN DISPLAY CONTAINER // -->
-<div class="container-fluid">
-  <div class="row">
-    <!-- SEARCH SIDEBAR -->
-    <div class="col-sm-4">
-      <div class="card">
-        <!-- header and body -->
-        <h5 class="card-header darkSky">City Search</h5>
-        <div class="card-body minPadding">
-          <!-- search bar and button-->
-          <div class="input-group mb-3">
-            <input type="text" class="form-control handwriting" placeholder=" Search..." aria-label="Search weather" aria-describedby="basic-addon2">
-            <button type="button" class="input-group-text btnBorders" id="basic-addon2">
-              <!-- magnifying glass icon -->
-              <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
-                <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
-              </svg>
-            </button>
-          </div>
-          <!-- recent search buttons (added dynamically) -->
-          <div class="list-group">
-            <button type="button" class="list-group-item list-group-item-action active" disabled>Recent searches</button>
-            <button type="button" class="list-group-item list-group-item-action handwriting">No recent searches</button>
-            <button type="button" class="list-group-item list-group-item-action"></button>
-            <button type="button" class="list-group-item list-group-item-action"></button>
-            <button type="button" class="list-group-item list-group-item-action"></button>
+    <!-- // MAIN DISPLAY CONTAINER // -->
+    <div class="container-fluid">
+      <div class="row">
+        <!-- SEARCH SIDEBAR -->
+        <div class="col-sm-4">
+          <div class="card">
+            <!-- header and body -->
+            <h5 class="card-header darkSky">City Search</h5>
+            <div class="card-body minPadding">
+              <!-- search bar and button-->
+              <div class="input-group mb-3">
+                <input type="text" class="form-control handwriting" placeholder=" Search..." aria-label="Search weather" aria-describedby="basic-addon2">
+                <button type="button" class="input-group-text btnBorders" id="basic-addon2">
+                  <!-- magnifying glass icon -->
+                  <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
+                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
+                  </svg>
+                </button>
+              </div>
+              <!-- recent search buttons (added dynamically) -->
+              <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action active" disabled>Recent searches</button>
+                <button type="button" class="list-group-item list-group-item-action handwriting">No recent searches</button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+              </div>
+            </div>
           </div>
         </div>
+
+        <!-- **CARD w/<p> tags** -->
+        <!-- WHEN I view current weather conditions for that city
+        THEN I am presented with the city name, the date, an icon representation of weather conditions, the temperature, the humidity, the wind speed, and the UV index -->
+        <!-- CURRENT SELECTED CITY -->
+        <div class="col-sm-8">
+          <div class="card">
+            <h5 class="card-header brightCloud">Anytown, US</h5>
+            <div class="card-body border">
+              <p class="card-text">Temperature: </p>
+              <p class="card-text">Humidity: </p>
+              <p class="card-text">Wind Speed: </p>
+              <p class="card-text">UV Index: <span class="badge badge-secondary">New</span></p>
+            </div>
+            <!-- FIVE-DAY FORECAST -->
+            <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
+            <div class="card-group border">
+              <div class="card coolCloud rulesVH">
+                <div class="card-body">
+                  <h5 class="card-title">Day 1</h5>
+                  <p class="card-text">T: </p>
+                  <p class="card-text">RH: </p>
+                </div>
+              </div>
+              <div class="card coolCloud rulesVH">
+                <div class="card-body">
+                  <h5 class="card-title">Day 1</h5>
+                  <p class="card-text">T: </p>
+                  <p class="card-text">RH: </p>
+                </div>
+              </div>
+              <div class="card coolCloud rulesVH">
+                <div class="card-body">
+                  <h5 class="card-title">Day 1</h5>
+                  <p class="card-text">T: </p>
+                  <p class="card-text">RH: </p>
+                </div>
+              </div>
+              <div class="card coolCloud rulesVH">
+                <div class="card-body">
+                  <h5 class="card-title">Day 1</h5>
+                  <p class="card-text">T: </p>
+                  <p class="card-text">RH: </p>
+                </div>
+              </div>
+              <div class="card coolCloud">
+                <div class="card-body">
+                  <h5 class="card-title">Day 1</h5>
+                  <p class="card-text">T: </p>
+                  <p class="card-text">RH: </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
-    <!-- **CARD w/<p> tags** -->
-    <!-- WHEN I view current weather conditions for that city
-    THEN I am presented with the city name, the date, an icon representation of weather conditions, the temperature, the humidity, the wind speed, and the UV index -->
-    <!-- CURRENT SELECTED CITY -->
-    <div class="col-sm-8">
-      <div class="card">
-        <h5 class="card-header brightCloud">Anytown, US</h5>
-        <div class="card-body border">
-          <p class="card-text">Temperature: </p>
-          <p class="card-text">Humidity: </p>
-          <p class="card-text">Wind Speed: </p>
-          <p class="card-text">UV Index: <span class="badge badge-secondary">New</span></p>
-        </div>
-        <!-- FIVE-DAY FORECAST -->
-        <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
-        <div class="card-group border">
-          <div class="card coolCloud rulesVH">
-            <div class="card-body">
-              <h5 class="card-title">Day 1</h5>
-              <p class="card-text">T: </p>
-              <p class="card-text">RH: </p>
-            </div>
-          </div>
-          <div class="card coolCloud rulesVH">
-            <div class="card-body">
-              <h5 class="card-title">Day 1</h5>
-              <p class="card-text">T: </p>
-              <p class="card-text">RH: </p>
-            </div>
-          </div>
-          <div class="card coolCloud rulesVH">
-            <div class="card-body">
-              <h5 class="card-title">Day 1</h5>
-              <p class="card-text">T: </p>
-              <p class="card-text">RH: </p>
-            </div>
-          </div>
-          <div class="card coolCloud rulesVH">
-            <div class="card-body">
-              <h5 class="card-title">Day 1</h5>
-              <p class="card-text">T: </p>
-              <p class="card-text">RH: </p>
-            </div>
-          </div>
-          <div class="card coolCloud">
-            <div class="card-body">
-              <h5 class="card-title">Day 1</h5>
-              <p class="card-text">T: </p>
-              <p class="card-text">RH: </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-<!-- **CURRENT WEATHER CARD** -->
-<!-- WHEN I view the UV index
-THEN I am presented with a color that indicates whether the conditions are favorable, moderate, or severe -->
+    <!-- **CURRENT WEATHER CARD** -->
+    <!-- WHEN I view the UV index
+    THEN I am presented with a color that indicates whether the conditions are favorable, moderate, or severe -->
 
 
-<!-- **5-DAY FORECAST CARDS** -->
-<!-- WHEN I view future weather conditions for that city
-THEN I am presented with a 5-day forecast that displays the date, an icon representation of weather conditions, the temperature, and the humidity -->
+    <!-- **5-DAY FORECAST CARDS** -->
+    <!-- WHEN I view future weather conditions for that city
+    THEN I am presented with a 5-day forecast that displays the date, an icon representation of weather conditions, the temperature, and the humidity -->
 
 
-<!-- localStorage.getItem -->
-<!-- WHEN I click on a city in the search history
-THEN I am again presented with current and future conditions for that city -->
+    <!-- localStorage.getItem -->
+    <!-- WHEN I click on a city in the search history
+    THEN I am again presented with current and future conditions for that city -->
 
-<!-- localStorage.getItem -->
-<!-- WHEN I open the weather dashboard
-THEN I am presented with the last searched city forecast -->
+    <!-- localStorage.getItem -->
+    <!-- WHEN I open the weather dashboard
+    THEN I am presented with the last searched city forecast -->
 
-<hr>
+    <hr>
 
-<footer></footer>
+    <footer></footer>
 
-<!-- JQUERY/JAVASCRIPT -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-<script src="./assets/style.js"></script>
-</body>
+    <!-- JAVASCRIPT -->
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+    <!-- moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
+    <!-- individual script -->
+    <script src="./assets/style.js"></script>
+
+  </body>
+
 </html>
