--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             <h5 class="card-header darkSky">City Search</h5>
             <div class="card-body minPadding">
               <!-- search bar and button-->
-              <div class="input-group mb-3">
-                <input type="text" class="form-control handwriting" placeholder=" Search..." aria-label="Search weather" aria-describedby="basic-addon2">
-                <button type="button" class="input-group-text btnBorders" id="basic-addon2">
+              <form class="input-group mb-3" id="cityForm">
+                <input type="text" class="form-control handwriting" placeholder=" Search..." aria-label="Search weather" aria-describedby="cityInput" id="cityInput">
+                <button type="submit" class="input-group-text btnBorders" id="genCity">
                   <!-- magnifying glass icon -->
                   <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
                     <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
                   </svg>
                 </button>
-              </div>
+              </form>
               <!-- recent search buttons (added dynamically) -->
               <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action active" disabled>Recent searches</button>
