Added buttons for recent city searches (invisible by default) and made the default message for searched cities 'No recent searches'.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,20 @@
               </form>
               <!-- recent search buttons (added dynamically) -->
               <div class="list-group">
+                <!-- recent search "header" -->
                 <button type="button" class="list-group-item list-group-item-action active" disabled>Recent searches</button>
-                <button type="button" class="list-group-item list-group-item-action handwriting">No recent searches</button>
-                <button type="button" class="list-group-item list-group-item-action"></button>
-                <button type="button" class="list-group-item list-group-item-action"></button>
-                <button type="button" class="list-group-item list-group-item-action"></button>
+                <!-- default "no recent searches" button -->
+                <button type="button" class="list-group-item list-group-item-action handwriting" id=cityBtn1></button>
+                <!-- default blank recent searches -->
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn2></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn3></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn4></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn5></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn6></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn7></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn8></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn9></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn10></button>
               </div>
             </div>
           </div>
