--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                 <!-- recent search "header" -->
                 <button type="button" class="list-group-item list-group-item-action active" disabled>Recent searches</button>
                 <!-- default "no recent searches" button -->
-                <button type="button" class="list-group-item list-group-item-action handwriting" id=cityBtn1></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn1></button>
                 <!-- default blank recent searches -->
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn2></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn3></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn4></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn5></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn6></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn7></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn8></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn9></button>
-                <button type="button" class="list-group-item list-group-item-action handwriting invisible" id=cityBtn10></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn2></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn3></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn4></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn5></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn6></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn7></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn8></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn9></button>
+                <button type="button" class="list-group-item list-group-item-action handwriting history" id=cityBtn10></button>
               </div>
             </div>
           </div>
