--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h5 class="card-header brightCloud">Anytown, US</h5>
             <div class="card-body border">
               <p class="card-text">Temperature: </p>
-              <p class="card-text">Humidity: </p>
+              <p class="card-text">Relative Humidity: </p>
               <p class="card-text">Wind Speed: </p>
               <p class="card-text">UV Index: <span class="badge badge-secondary">New</span></p>
             </div>
