Got UV Index information and created CSS Classes. Got certain parameters for OWM's API and set up variables.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- CURRENT SELECTED CITY -->
         <div class="col-sm-8">
           <div class="card">
-            <h5 class="card-header brightCloud">Anytown, US</h5>
+            <h5 class="card-header brightCloud" id="cityName">Anytown, US</h5>
             <div class="card-body border">
               <p class="card-text">Temperature: </p>
               <p class="card-text">Relative Humidity: </p>
