Set up preliminary AJAX structure to make weather, UV, and five-day forecast queries. Made conditional statement to assign UV color to UVIBox.

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           <div class="card">
             <h5 class="card-header brightCloud" id="cityName">Anytown, US</h5>
             <div class="card-body border">
-              <p class="card-text">Temperature: </p>
-              <p class="card-text">Relative Humidity: </p>
-              <p class="card-text">Wind Speed: </p>
-              <p class="card-text">UV Index: <span class="badge badge-secondary">New</span></p>
+              <p class="card-text">Temperature: <span id="TempF"></span></p>
+              <p class="card-text">Relative Humidity: <span id="RHumidity"></span></p>
+              <p class="card-text">Wind Speed: <span id="windSpeed"></span></p>
+              <p class="card-text">UV Index: <span id="UVIndex"></span><span class="badge badge-secondary" id="UVIBox">No Data Available</span></p>
             </div>
             <!-- FIVE-DAY FORECAST -->
             <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
