Got AJAX calls to work for getting weather data and UV Index. Fixed CSS styles so that the UVI Box would reflect proper color and allow for text contrast on yellow 'moderate' level.

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <!-- CURRENT SELECTED CITY -->
         <div class="col-sm-8">
           <div class="card">
-            <h5 class="card-header brightCloud" id="cityName">Anytown, US</h5>
+            <h5 class="card-header brightCloud" id="cityName">Anytown</h5>
             <div class="card-body border">
-              <p class="card-text">Temperature: <span id="TempF"></span></p>
-              <p class="card-text">Relative Humidity: <span id="RHumidity"></span></p>
-              <p class="card-text">Wind Speed: <span id="windSpeed"></span></p>
-              <p class="card-text">UV Index: <span id="UVIndex"></span><span class="badge badge-secondary" id="UVIBox">No Data Available</span></p>
+              <p class="card-text">Temperature:   <span class="handwriting" id="tempF"></span></p>
+              <p class="card-text">Relative Humidity:   <span  class="handwriting" id="RHumidity"></span></p>
+              <p class="card-text">Wind Speed:   <span class="handwriting" id="windSpeed"></span></p>
+              <p class="card-text">UV Index:   <span class="handwriting" id="UVIndex"></span>   <span class="badge badge-secondary" id="UVIBox">No Data Available</span></p>
             </div>
             <!-- FIVE-DAY FORECAST -->
             <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
@@ -147,7 +147,7 @@
 
     <!-- JAVASCRIPT -->
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
     <!-- individual script -->
