Fixed issue referencing the current weather condition from the OWM API (required an index to pull up weather.icon). Fixed span issue in city header to manipulate CSS styling. Added animation to background weather icon.

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <!-- CURRENT SELECTED CITY -->
         <div class="col-sm-8">
           <div class="card">
-            <h5 class="card-header brightCloud" id="cityName">Anytown</h5>
-            <div class="card-body border">
+            <h5 class="card-header brightCloud" id="cityHeader">Anytown</span></h5>
+            <div class="card-body border" id="weatherDisplay">
               <p class="card-text">Temperature:   <span class="handwriting" id="tempF"></span></p>
               <p class="card-text">Relative Humidity:   <span  class="handwriting" id="RHumidity"></span></p>
               <p class="card-text">Wind Speed:   <span class="handwriting" id="windSpeed"></span></p>
-              <p class="card-text">UV Index:   <span class="handwriting" id="UVIndex"></span>   <span class="badge badge-secondary" id="UVIBox">No Data Available</span></p>
+              <p class="card-text">UV Index:   <span class="handwriting" id="UVIndex"></span>     <span class="badge badge-secondary" id="UVIBox">No Data Available</span></p>
             </div>
             <!-- FIVE-DAY FORECAST -->
             <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
