Set up HTML classes and IDs in the Five-Day Forecast section to accept dynamic updates from style.js.

--- a/index.html
+++ b/index.html
@@ -81,39 +81,44 @@
             <!-- FIVE-DAY FORECAST -->
             <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
             <div class="card-group border">
+              <!-- day 1 -->
               <div class="card coolCloud rulesVH">
                 <div class="card-body">
-                  <h5 class="card-title">Day 1</h5>
-                  <p class="card-text">T: </p>
-                  <p class="card-text">RH: </p>
+                  <h5 class="card-title" id="FDF1Date">Day 1</h5>
+                  <p class="card-text">T: <span id="f1TempF"></span></p>
+                  <p class="card-text">RH: <span id="f1RHumidity"></span></p>
                 </div>
               </div>
+              <!-- day 2 -->
               <div class="card coolCloud rulesVH">
                 <div class="card-body">
-                  <h5 class="card-title">Day 1</h5>
-                  <p class="card-text">T: </p>
-                  <p class="card-text">RH: </p>
+                  <h5 class="card-title" id="FDF2Date">Day 2</h5>
+                  <p class="card-text">T: <span id="f2TempF"></span></p>
+                  <p class="card-text">RH: <span id="f2RHumidity"></span></p>
                 </div>
               </div>
+              <!-- day 3 -->
               <div class="card coolCloud rulesVH">
                 <div class="card-body">
-                  <h5 class="card-title">Day 1</h5>
-                  <p class="card-text">T: </p>
-                  <p class="card-text">RH: </p>
+                  <h5 class="card-title" id="FDF3Date">Day 3</h5>
+                  <p class="card-text">T: <span id="f3TempF"></span></p>
+                  <p class="card-text">RH: <span id="f3RHumidity"></span></p>
                 </div>
               </div>
+              <!-- day 4 -->
               <div class="card coolCloud rulesVH">
                 <div class="card-body">
-                  <h5 class="card-title">Day 1</h5>
-                  <p class="card-text">T: </p>
-                  <p class="card-text">RH: </p>
+                  <h5 class="card-title" id="FDF4Date">Day 4</h5>
+                  <p class="card-text">T: <span id="f4TempF"></span></p>
+                  <p class="card-text">RH: <span id="f4RHumidity"></span></p>
                 </div>
               </div>
+              <!-- day 5 -->
               <div class="card coolCloud">
                 <div class="card-body">
-                  <h5 class="card-title">Day 1</h5>
-                  <p class="card-text">T: </p>
-                  <p class="card-text">RH: </p>
+                  <h5 class="card-title" id="FDF5Date">Day 5</h5>
+                  <p class="card-text">T: <span id="f5TempF"></span></p>
+                  <p class="card-text">RH: <span id="f5RHumidity"></span></p>
                 </div>
               </div>
             </div>
