Fixed style.js so that correct hours were being pulled from the OWM API. Got those data to load on the DOM under the five-day forecast area. Fixed animation and CSS styles so that text is more visible.

--- a/index.html
+++ b/index.html
@@ -79,46 +79,46 @@
               <p class="card-text">UV Index:   <span class="handwriting" id="UVIndex"></span>     <span class="badge badge-secondary" id="UVIBox">No Data Available</span></p>
             </div>
             <!-- FIVE-DAY FORECAST -->
-            <h5 class="card-header brightCloudRev">Five-Day Forecast</h5>
+            <h5 class="card-header redText">Five-Day Forecast</h5>
             <div class="card-group border">
               <!-- day 1 -->
               <div class="card coolCloud rulesVH">
-                <div class="card-body">
+                <div class="card-body" id="FD1Icon">
                   <h5 class="card-title" id="FDF1Date">Day 1</h5>
-                  <p class="card-text">T: <span id="f1TempF"></span></p>
-                  <p class="card-text">RH: <span id="f1RHumidity"></span></p>
+                  <p class="card-text">T: <span class="brightCloudRev" id="f1TempF"></span></p>
+                  <p class="card-text">RH: <span class="brightCloudRev" id="f1RHumidity"></span></p>
                 </div>
               </div>
               <!-- day 2 -->
               <div class="card coolCloud rulesVH">
-                <div class="card-body">
+                <div class="card-body" id="FD2Icon">
                   <h5 class="card-title" id="FDF2Date">Day 2</h5>
-                  <p class="card-text">T: <span id="f2TempF"></span></p>
-                  <p class="card-text">RH: <span id="f2RHumidity"></span></p>
+                  <p class="card-text">T: <span class="brightCloudRev" id="f2TempF"></span></p>
+                  <p class="card-text">RH: <span class="brightCloudRev" id="f2RHumidity"></span></p>
                 </div>
               </div>
               <!-- day 3 -->
               <div class="card coolCloud rulesVH">
-                <div class="card-body">
+                <div class="card-body" id="FD3Icon">
                   <h5 class="card-title" id="FDF3Date">Day 3</h5>
-                  <p class="card-text">T: <span id="f3TempF"></span></p>
-                  <p class="card-text">RH: <span id="f3RHumidity"></span></p>
+                  <p class="card-text">T: <span class="brightCloudRev" id="f3TempF"></span></p>
+                  <p class="card-text">RH: <span class="brightCloudRev" id="f3RHumidity"></span></p>
                 </div>
               </div>
               <!-- day 4 -->
               <div class="card coolCloud rulesVH">
-                <div class="card-body">
+                <div class="card-body" id="FD4Icon">
                   <h5 class="card-title" id="FDF4Date">Day 4</h5>
-                  <p class="card-text">T: <span id="f4TempF"></span></p>
-                  <p class="card-text">RH: <span id="f4RHumidity"></span></p>
+                  <p class="card-text">T: <span class="brightCloudRev" id="f4TempF"></span></p>
+                  <p class="card-text">RH: <span class="brightCloudRev" id="f4RHumidity"></span></p>
                 </div>
               </div>
               <!-- day 5 -->
               <div class="card coolCloud">
-                <div class="card-body">
+                <div class="card-body" id="FD5Icon">
                   <h5 class="card-title" id="FDF5Date">Day 5</h5>
-                  <p class="card-text">T: <span id="f5TempF"></span></p>
-                  <p class="card-text">RH: <span id="f5RHumidity"></span></p>
+                  <p class="card-text">T: <span class="brightCloudRev" id="f5TempF"></span></p>
+                  <p class="card-text">RH: <span class="brightCloudRev" id="f5RHumidity"></span></p>
                 </div>
               </div>
             </div>
