--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
       <p class="text-right" id="currTime"></p>
     </header>
 
+    <!-- // MODAL // -->
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Whoops!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            It would appear that there's no data for "<span id="errorCity"></span>." Please make sure that you've spelled your city correctly and try again.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- // MAIN DISPLAY CONTAINER // -->
     <div class="container-fluid">
       <div class="row">
@@ -155,6 +175,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
+    <!-- Bootsrap JavaScript -->
+    <script src="./assets/bootstrap.js"></script>
     <!-- individual script -->
     <script src="./assets/style.js"></script>
 
